<?xml version="1.0"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>edu.harvard.hms.dbmi.avillach</groupId>
		<artifactId>pic-sure-api</artifactId>
		<version>2.0.0-SNAPSHOT</version>
	</parent>
	<artifactId>pic-sure-api-wildfly</artifactId>
	<packaging>war</packaging>
	<name>pic-sure-api-wildfly</name>
	<url>http://maven.apache.org</url>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<wildfly.version>13.0.0.Final</wildfly.version>
		<argLine>--add-modules jdk.incubator.httpclient</argLine>
		<jboss.home>${project.build.directory}/wildfly-${wildfly.version}</jboss.home>
	</properties>
	<dependencies>
		<dependency>
			<groupId>edu.harvard.hms.dbmi.avillach</groupId>
			<artifactId>pic-sure-api-data</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>edu.harvard.hms.dbmi.avillach</groupId>
			<artifactId>pic-sure-irct-resource</artifactId>
			<classifier>classes</classifier>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>edu.harvard.hms.dbmi.avillach</groupId>
			<artifactId>pic-sure-aggregate-resource</artifactId>
			<classifier>classes</classifier>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>edu.harvard.hms.dbmi.avillach</groupId>
			<artifactId>pic-sure-hsapi-resource</artifactId>
			<classifier>classes</classifier>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>edu.harvard.hms.dbmi.avillach</groupId>
			<artifactId>pic-sure-resource-api</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>edu.harvard.hms.dbmi.avillach</groupId>
			<artifactId>pic-sure-api-war</artifactId>
			<version>${project.version}</version>
			<type>war</type>
		</dependency>
		<dependency>
			<groupId>edu.harvard.hms.dbmi.avillach</groupId>
			<artifactId>pic-sure-util</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>javax</groupId>
			<artifactId>javaee-api</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-core</artifactId>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-impl</artifactId>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hibernate.javax.persistence</groupId>
			<artifactId>hibernate-jpa-2.1-api</artifactId>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<configuration>
					<failOnMissingWebXml>false</failOnMissingWebXml>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>9</source>
					<target>9</target>
					<compilerArgument>--add-modules=jdk.incubator.httpclient</compilerArgument>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<failOnError>false</failOnError>
					<excludeDefaultDirectories>true</excludeDefaultDirectories>
					<filesets>
						<fileset>
							<directory>target/</directory>
							<followSymlinks>false</followSymlinks>
							<excludes>
								<excludes>**/wildfly-*/**</excludes>
							</excludes>
						</fileset>
					</filesets>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<id>unpack-wildfly</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>unpack</goal>
						</goals>
						<inherited>false</inherited>
						<configuration>
							<artifactItems>
								<artifactItem>
									<groupId>org.wildfly</groupId>
									<artifactId>wildfly-dist</artifactId>
									<version>${wildfly.version}</version>
									<type>zip</type>
									<overWrite>false</overWrite>
									<outputDirectory>${project.build.directory}</outputDirectory>
								</artifactItem>
							</artifactItems>
						</configuration>
					</execution>
					<execution>
						<id>retrieve-mysql-driver</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>copy</goal>
						</goals>
						<inherited>false</inherited>
						<configuration>
							<artifactItems>
								<artifactItem>
									<groupId>mysql</groupId>
									<artifactId>mysql-connector-java</artifactId>
									<version>5.1.38</version>
									<type>jar</type>
									<overWrite>true</overWrite>
									<outputDirectory>${jboss.home}/modules/system/layers/base/com/sql/mysql/main/</outputDirectory>
								</artifactItem>
								<artifactItem>
									<groupId>edu.harvard.hms.dbmi.avillach</groupId>
									<artifactId>pic-sure-irct-resource</artifactId>
									<version>${project.version}</version>
									<type>war</type>
									<overWrite>true</overWrite>
									<outputDirectory>${jboss.home}/standalone/deployments</outputDirectory>
								</artifactItem>
								<artifactItem>
									<groupId>edu.harvard.hms.dbmi.avillach</groupId>
									<artifactId>pic-sure-aggregate-resource</artifactId>
									<version>${project.version}</version>
									<type>war</type>
									<overWrite>true</overWrite>
									<outputDirectory>${jboss.home}/standalone/deployments</outputDirectory>
								</artifactItem>
								<artifactItem>
									<groupId>edu.harvard.hms.dbmi.avillach</groupId>
									<artifactId>pic-sure-hsapi-resource</artifactId>
									<version>${project.version}</version>
									<type>war</type>
									<overWrite>true</overWrite>
									<outputDirectory>${jboss.home}/standalone/deployments</outputDirectory>
								</artifactItem>
							</artifactItems>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.0.2</version>
				<executions>
					<execution>
						<id>copy-standalone-xml</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${jboss.home}/standalone/configuration</outputDirectory>
							<resources>
								<resource>
									<directory>src/main/resources/wildflyConfiguration</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-module-xml</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${jboss.home}/modules/</outputDirectory>
							<resources>
								<resource>
									<directory>src/main/resources/modules/</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.wildfly.plugins</groupId>
				<artifactId>wildfly-maven-plugin</artifactId>
				<version>1.2.1.Final</version>
				<configuration>
					<port>9990</port>
					<jbossHome>${jboss.home}</jbossHome>
					<java-opts>
						<java-opt>-Xmx1024m</java-opt>
						<java-opt>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005</java-opt>
						<java-opt>--add-modules=jdk.incubator.httpclient</java-opt>
					</java-opts>
					<env>
						<PIC_SURE_CLIENT_SECRET>foo</PIC_SURE_CLIENT_SECRET>
						<PIC_SURE_USER_ID_CLAIM>email</PIC_SURE_USER_ID_CLAIM>
						<TARGET_IRCT_URL>https://nhanes.hms.harvard.edu/rest/v1/</TARGET_IRCT_URL>
						<TARGET_PICSURE_URL>http://localhost:8080/${project.artifactId}-${project.version}/PICSURE</TARGET_PICSURE_URL>
						<PICSURE_2_TOKEN>eyJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJmb29AYmFyLmNvbSIsImlzcyI6ImJhciIsImV4cCI6ODY1NTI4Mzk4NTQzLCJpYXQiOjE1Mjg0ODQ5NDMsImp0aSI6IkZvbyIsImVtYWlsIjoiZm9vQGJhci5jb20ifQ.KE2NIfCzQnd_vhykhb0sHdPHEwvy2Wphc4UVsKAVTgM</PICSURE_2_TOKEN>
						<RESULT_FORMAT>JSON</RESULT_FORMAT>
					</env>
					<add-user>
						<users>
							<user>
								<username>admin</username>
								<password>admin.1234</password>
							</user>
							<user>
								<username>admin-user</username>
								<password>user.1234</password>
								<groups>
									<group>admin</group>
									<group>user</group>
								</groups>
								<application-user>true</application-user>
							</user>
							<user>
								<username>default-user</username>
								<password>user.1234</password>
								<groups>
									<group>user</group>
								</groups>
								<application-user>true</application-user>
							</user>
						</users>
					</add-user>
				</configuration>

				<executions>
					<execution>
						<id>wildfly-run</id>
						<phase>pre-integration-test</phase>
						<goals>
							<goal>start</goal>
							<goal>deploy</goal>
						</goals>
						<configuration>
							<env>
								<TARGET_IRCT_URL>https://nhanes.hms.harvard.edu/rest/v1/</TARGET_IRCT_URL>
								<TARGET_PICSURE_URL>http://localhost:8080/${project.artifactId}-${project.version}/PICSURE</TARGET_PICSURE_URL>
								<PICSURE_2_TOKEN>eyJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJmb29AYmFyLmNvbSIsImlzcyI6ImJhciIsImV4cCI6ODY1NTI4Mzk4NTQzLCJpYXQiOjE1Mjg0ODQ5NDMsImp0aSI6IkZvbyIsImVtYWlsIjoiZm9vQGJhci5jb20ifQ.KE2NIfCzQnd_vhykhb0sHdPHEwvy2Wphc4UVsKAVTgM</PICSURE_2_TOKEN>
								<RESULT_FORMAT>CSV</RESULT_FORMAT>
								<PIC_SURE_CLIENT_SECRET>foo</PIC_SURE_CLIENT_SECRET>
								<PIC_SURE_USER_ID_CLAIM>email</PIC_SURE_USER_ID_CLAIM>
							</env>
							<skip>${skipIT}</skip>
						</configuration>
					</execution>
					<execution>
						<id>wildfly-stop</id>
						<phase>post-integration-test</phase>
						<goals>
							<goal>undeploy</goal>
							<goal>shutdown</goal>
						</goals>
						<configuration>
							<skip>${skipIT}</skip>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.20</version>
				<configuration><!-- <includes> <include>edu.harvard.dbmi.avillach.SystemServiceIT</include> 
						</includes> -->
				</configuration>
				<executions>
					<execution>
						<id>integration-test</id>
						<goals>
							<goal>integration-test</goal>
						</goals>
						<configuration>
							<environmentVariables>
								<PIC_SURE_CLIENT_SECRET>foo</PIC_SURE_CLIENT_SECRET>
								<TARGET_IRCT_URL>https://nhanes.hms.harvard.edu/rest/v1/</TARGET_IRCT_URL>
								<TARGET_PICSURE_URL>http://localhost:8080/${project.artifactId}-${project.version}/PICSURE</TARGET_PICSURE_URL>
								<PICSURE_2_TOKEN>eyJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJmb29AYmFyLmNvbSIsImlzcyI6ImJhciIsImV4cCI6ODY1NTI4Mzk4NTQzLCJpYXQiOjE1Mjg0ODQ5NDMsImp0aSI6IkZvbyIsImVtYWlsIjoiZm9vQGJhci5jb20ifQ.KE2NIfCzQnd_vhykhb0sHdPHEwvy2Wphc4UVsKAVTgM</PICSURE_2_TOKEN>
								<RESULT_FORMAT>CSV</RESULT_FORMAT>
							</environmentVariables>
							<systemPropertyVariables>
								<service.url>http://localhost:8080/${project.artifactId}-${project.version}/PICSURE</service.url>
								<irct.service.url>http://localhost:8080/pic-sure-irct-resource-${project.version}/</irct.service.url>
								<aggregate.service.url>http://localhost:8080/pic-sure-aggregate-resource-${project.version}/</aggregate.service.url>
								<hsapi.service.url>http://localhost:8080/pic-sure-hsapi-resource-${project.version}/</hsapi.service.url>
							</systemPropertyVariables>
						</configuration>
					</execution>
					<execution>
						<id>verify</id>
						<goals>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
				<dependencies>
					<dependency>
						<groupId>javax.xml.bind</groupId>
						<artifactId>jaxb-api</artifactId>
						<version>2.3.0</version>
					</dependency>
					<dependency>
						<groupId>com.sun.xml.bind</groupId>
						<artifactId>jaxb-core</artifactId>
						<version>2.3.0</version>
					</dependency>
					<dependency>
						<groupId>com.sun.xml.bind</groupId>
						<artifactId>jaxb-impl</artifactId>
						<version>2.3.0</version>
					</dependency>
					<dependency>
						<groupId>javax.activation</groupId>
						<artifactId>activation</artifactId>
						<version>1.1.1</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>

	</build>
</project>
